--- a/css/master.css
+++ b/css/master.css
@@ -3,7 +3,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Montserrat', sans-serif;
+}
+
+body {
+    font-weight: 300;
+    color: #989898 ;
 }
 
 /*UTILITY*/
@@ -33,14 +38,36 @@
 }
 
 /*HEADER*/
-header {
-    background-color: #e579e6; /*colore riferimento*/
+.brand {
+    display: inline-block;
 }
 
-/*hero*/
-.hero {
-    background-color: #e1d67a; /*colore riferimento*/
+.brand img {
+    width: 165px;
 }
+
+.main-menu li {
+    display: inline-block;
+    list-style: none;
+    margin-right: 10px;
+}
+
+.main-menu li a {
+    text-decoration: none;
+    color: #868686;
+    text-transform: uppercase;
+}
+
+.main-menu li a:hover {
+    color: black;
+}
+
+/*HERO*/
+.pictures {
+    width: 100%;
+    border-radius: 15px;
+}
+
 
 /*colums section*/
 .colums-section {
