--- a/css/master.css
+++ b/css/master.css
@@ -37,6 +37,13 @@ body {
     background-color: rgba(247, 111, 7, 0.5);
 }
 
+.pic {
+    width: 100%;
+    background-position: center;
+    border-radius: 15px;
+    filter: brightness(75%);
+}
+
 /*HEADER*/
 .brand {
     display: inline-block;
@@ -63,10 +70,13 @@ body {
 }
 
 /*HERO*/
-.pictures {
-    width: 100%;
-    border-radius: 15px;
+.hero {
+    height: 400px;
+    background-attachment: fixed ;
+    background-image: url(../img/banner.jpg);
 }
+
+
 
 
 /*colums section*/
