--- a/css/master.css
+++ b/css/master.css
@@ -41,7 +41,6 @@ body {
     width: 100%;
     background-position: center;
     border-radius: 15px;
-    filter: brightness(75%);
 }
 
 /*HEADER*/
@@ -74,11 +73,28 @@ body {
     height: 400px;
     background-attachment: fixed ;
     background-image: url(../img/banner.jpg);
+    position: relative;
 }
 
+.hero-description{
+    color: white;
+    position: absolute;
+    left: 50px;
+    bottom: 50px;
+}
 
+.hero div:first-child {
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    border-radius: 15px;
+}
 
-
+h3 {
+    font-size: 25px;
+}
 /*colums section*/
 .colums-section {
     background-color: #0186ff; /*colore riferimento*/
