--- a/css/master.css
+++ b/css/master.css
@@ -32,11 +32,6 @@ body {
     display: table;
 }
 
-.debug-content {
-    height: 60px;
-    background-color: rgba(247, 111, 7, 0.5);
-}
-
 .pic {
     width: 100%;
     background-position: center;
@@ -158,7 +153,13 @@ div > h5 {
     margin-bottom: 10px;
 }
 
-.fot {
+/*FOOTER*/
+footer {
+    text-align: center;
+    color: #000;
+}
 
-    background-color: rebeccapurple;
+.heart {
+    width: 20px;
+    color: red;
 }
