--- a/css/master.css
+++ b/css/master.css
@@ -38,15 +38,6 @@ body {
     border-radius: 15px;
 }
 
-.drk{
-    background-color: rgba(0, 0, 0, 0.2);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    border-radius: 15px;
-}
-
 /*HEADER*/
 .brand {
     display: inline-block;
@@ -87,7 +78,7 @@ body {
     bottom: 50px;
 }
 
-h3 {
+.hero-description > div {
     font-size: 25px;
 }
 
@@ -95,9 +86,16 @@ div > p {
     font-size: 14px;
 }
 
+.drk{
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    border-radius: 15px;
+}
 
 /*colums section*/
-
 .colum-header {
     margin-bottom: 30px;
 }
@@ -112,7 +110,6 @@ div > p {
 .colums .col {
     float: left;
     width: 20%;
-    position: relative;
 }
 
 .colums .col:nth-child(2) {
@@ -123,11 +120,14 @@ div > p {
 .col-img2,
 .col-img3 {
     width: 100%;
-    height: 150px;
+    height: 200px;
     background-position: center;
     background-size: cover;
-    margin-bottom: 20px;
+    filter: brightness(85%);
+    border-radius: 15px;
+    margin-bottom: 15px;
 }
+
 .col-img1 {
     background-image: url(../img/img-1.jpg);
 }
@@ -138,15 +138,6 @@ div > p {
 
 .col-img3 {
     background-image: url(../img/img-3.jpg);
-}
-
-.over1 {
-    background-color: rgba(0, 0, 0, 0.2);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    border-radius: 15px;
 }
 
 div > h5 {
